// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Touchable Tests Text components can be tappable 1`] = `
{
  "Automation Tree": {
    "AutomationId": "tappable_text",
    "ControlType": 50020,
    "HelpText": "",
    "IsEnabled": true,
    "IsKeyboardFocusable": false,
    "LocalizedControlType": "text",
    "Name": "Text has built-in onPress handling",
  },
  "Visual Tree": {},
}
`;

exports[`Touchable Tests TouchableWithoutFeedback components should not give visual feedback 1`] = `
{
  "Automation Tree": {
    "AutomationId": "touchable_without_feedback_button",
    "Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "text",
        "Name": "Tap Here For No Feedback!",
      },
    ],
    "ControlType": 50026,
    "HelpText": "",
    "IsEnabled": true,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "group",
    "Name": "",
  },
  "Visual Tree": {},
}
`;

exports[`Touchable Tests Touchables can contain a Text component 1`] = `
{
  "Automation Tree": {
    "AutomationId": "touchable_highlight_text_button",
    "Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "text",
        "Name": "Tap Here For Custom Highlight!",
      },
    ],
    "ControlType": 50026,
    "HelpText": "",
    "IsEnabled": true,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "group",
    "Name": "",
  },
  "Visual Tree": {},
}
`;

exports[`Touchable Tests Touchables can contain an Image component 1`] = `
{
  "Automation Tree": {
    "AutomationId": "touchable_highlight_image_button",
    "ControlType": 50026,
    "HelpText": "",
    "IsEnabled": true,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "group",
    "Name": "",
  },
  "Visual Tree": {},
}
`;

exports[`Touchable Tests Touchables can delay events 1`] = `
{
  "Automation Tree": {
    "AutomationId": "touchable_delay_events_button",
    "Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "text",
        "Name": "Press Me",
      },
    ],
    "ControlType": 50026,
    "HelpText": "",
    "IsEnabled": true,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "group",
    "Name": "",
  },
  "Visual Tree": {},
}
`;

exports[`Touchable Tests Touchables can enable a hit slop region 1`] = `
{
  "Automation Tree": {
    "AutomationId": "touchable_hit_slop_button",
    "Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "text",
        "Name": "Press Outside This View",
      },
    ],
    "ControlType": 50026,
    "HelpText": "",
    "IsEnabled": true,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "group",
    "Name": "",
  },
  "Visual Tree": {},
}
`;

exports[`Touchable Tests Touchables can register feedback events 1`] = `
{
  "Automation Tree": {
    "AutomationId": "touchable_feedback_events_button",
    "Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "text",
        "Name": "Press Me",
      },
    ],
    "ControlType": 50000,
    "HelpText": "",
    "IsEnabled": true,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "button",
    "Name": "touchable feedback events",
  },
  "Visual Tree": {},
}
`;
